fixing project page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="author" content="McKings" />
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="McKings - Front-End Developer & AI Engineer" />
+  <meta property="og:title" content="McKings - Automation Engineer & AI Engineer" />
   <meta property="og:description" content="Portfolio showcasing front-end development and data science projects" />
   <meta property="og:type" content="website" />
 
