--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
-  <title>McKings - Automation Engineer, Front-End Developer & AI Engineer Portfolio</title>
+  <title>McKings - Automation Engineer, Front-End Developer, Data Science & AI Engineer Portfolio</title>
   <meta name="description"
     content="Portfolio of McKings - Front-End Developer, AI Engineer, and Data Scientist. Explore projects in React development, machine learning, and data science." />
   <meta name="keywords"
@@ -14,7 +14,7 @@
   <meta name="author" content="McKings" />
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="McKings - Automation Engineer & AI Engineer" />
+  <meta property="og:title" content="McKings - Front-End/Automation & Data Science" />
   <meta property="og:description" content="Portfolio showcasing front-end development and data science projects" />
   <meta property="og:type" content="website" />
 
